Name:                   saucelabs-webdriver
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.Webdriver.Auth
                        Test.Webdriver.WaitCommands
                        Test.Webdriver.InputCommands
                        Test.Webdriver.Tests                      

  Other-Modules:        Test.Webdriver.Auth.Internal
  Build-Depends:        base >= 4 && < 5
                      , webdriver == 0.6.1.7569
                      , http-client
                      , http-conduit == 2.1.5
                      , mtl
                      , exceptions
                      , transformers-base
                      , lifted-base
                      , monad-control
                      , HTTP
                      , aeson
                      , bytestring
                      , http-types
                      , text
                      , base64-bytestring
                      , data-default
                      , resourcet == 1.1.5
                      , either-unwrap == 1.1

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
