Name:                   saucelabs-webdriver
Version:                1.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Category:               Web, Browser, Testing
Synopsis:               Haskell Webdriver compatible with SauceLabs  
Description:            Webdriver command functions, functions for connecting/communicating with SauceLabs
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.Webdriver.Auth
                        Test.Webdriver.WaitCommands
                        Test.Webdriver.InputCommands
                        Test.Webdriver.Auth.Internal              

  Build-Depends:        base >= 4 && < 5
                      , webdriver
                      , http-client
                      , http-conduit >= 1.9
                      , mtl
                      , exceptions
                      , transformers-base
                      , lifted-base
                      , monad-control >= 0.3.3.1 && < 2.0.0
                      , aeson
                      , bytestring
                      , http-types
                      , text
                      , base64-bytestring
                      , data-default
                      , resourcet >= 1.1.4.1
                      , either-unwrap
                      , lens
                      , lens-aeson
                      , containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
        
source-repository head
  type: git
  location: git://github.com/plow-technologies/saucelabs-webdriver.git