Name:                   webdriver-authentication
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Test.Webdriver.Auth
  Other-Modules:        Test.Webdriver.Auth.Internal
  Build-Depends:        base >= 4 && < 5
                      , webdriver
                      , http-client
                      , mtl
                      , exceptions
                      , transformers-base
                      , lifted-base
                      , monad-control
                      , HTTP
                      , aeson
                      , bytestring
                      , http-types
                      , text
                      , base64-bytestring
                      , data-default

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
